Ya se procesan 1000000 de regs.